<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OffBit</string>
    <string name="welcome_message">Welcome to OffBit</string>
    <string name="enter_username">Enter username to call</string>
    <string name="start_call">Start Call</string>
    <string name="end_call">End Call</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="call_history">Call History</string>
    <string name="browser">Browser</string>
</resources>
